--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/denim_dan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vue3-ai-assistant</title>
+    <title>EC-Chatbot</title>
   </head>
   <body class="bg-gray-100">
     <div id="app"></div>
